--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,9 +10,11 @@ services:
       RUN_ENV: docker
       TEST_SUITE: facilitators
       BROWSER: chromium
-    command: sh -c "
-  mkdir -p /app/allure-results /app/allure-report &&
-  sh allure-env.sh &&
-  pnpm run test:allure || true &&
-  pnpm run allure:generate || true
-"
+    command:
+      - sh
+      - -c
+      - |
+        mkdir -p /app/allure-results /app/allure-report
+        sh allure-env.sh
+        pnpm run test:allure || true
+        pnpm run allure:generate || true
