--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+allure-results/
+allure-report/
+allure-results/*
+allure-report/*
