--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "paths": {
       "@pages/*": ["pages/*"],
       "@tests/*": ["tests/*"]
-    }
+    },
+    "types": ["node", "@playwright/test"]
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "playwright-report", "test-results"]
